	- Remove unneeded assert. (DLR)
	- Rename variable buflen to buf_len, for consistency. (DLR)
  input_tab()
	- Disable completion of usernames, directories, and filenames
	  if the cursor isn't at the end of the line, as it can lead to
	  odd behavior (e.g. adding a copy of the entire match to the
	  middle of the line instead of just the uncompleted part of the
	  match). (DLR)
- nano.c:
  version()
	- Display copyright notices. (DLR)
  copy_from_file()
	- Fix potential segfault after uncutting one line of text with
	  the mark on by properly preserving the beginning of the mark.
	  (DLR, found by Paul Goins)
	- Make sure the mark is always properly positioned after
	  uncutting text with the mark on. (DLR)
  main()
	- Exit if initscr() fails. (DLR)
	- Simplify terminal handling by using raw mode instead of cbreak
	  mode. (DLR)
- prompt.c:
  do_yesno_prompt()
	- Remove redundant check for NO_HELP's being FALSE. (DLR)
- search.c:
  do_replace_loop()
	- Fix problem where replacing e.g. single-byte characters with
	  multibyte ones could result in openfile->totsize's being
	  miscalculated. (DLR)
- text.c:
  execute_command()
	- Call terminal_init() instead of just disable_signals() after
	  executing the command, as the command may have changed the
	  terminal settings. (DLR)
- utils.c:
  ngetline(), ngetdelim()
	- Update copyright notice to account for modifications. (DLR)
  ngetdelim()
	- Simplify. (DLR)
- winio.c:
  get_key_buffer()
	- Fix inaccurate comments. (DLR)
  do_mouseinput()
	- Add mouse wheel support.  Now, if mouse support is enabled,
	  and nano is using a version of ncurses compiled with the
	  --enable-ext-mouse option, rolling the mouse wheel up or down
	  will move the cursor three lines up or down.  Note that
	  ncurses built without --enable-ext-mouse needs to handle both
	  clicks and releases of the first mouse button, but ncurses
	  built with --enable-ext-mouse only needs to handle releases,